# gruth

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
docs/: config.md  features.md  install.md  keybindings.md
src/: app.rs  cli.rs  config.rs  dir_picker.rs  events.rs  git_ops.rs  main.rs  scanner.rs  sync.rs  ui.rs  update.rs
