[package]
name = "gruth"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "gruth — Git Repository UTility Helper. A TUI dashboard for monitoring and syncing multiple git repositories."
license = "MIT"
repository = "https://github.com/mik-tf/gruth"
readme = "README.md"
keywords = ["git", "tui", "terminal", "monitor", "dashboard"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
git2 = { version = "0.19", features = ["vendored-openssl", "vendored-libgit2"] }
glob = "0.3"
notify-rust = "4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
